--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     
     <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@0.11.1"></script>
     <script src="qlearn.js"></script>
+    <script src="models.js"></script>
     <script src="demo.js"></script>
 </head>
 <body>
